fix css on mobile view

--- a/src/components/details/ContactForm.css
+++ b/src/components/details/ContactForm.css
@@ -39,6 +39,7 @@
   margin-left: 20px;
   border-radius: 5px;
   border: none;
+  width: 70%;
 }
 
 .contact-form button {
@@ -48,4 +49,25 @@
   font-size: 1em;
   margin-left: 20px;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 375px) {
+  .contact-form form {
+    max-width: 225px;
+    padding: 10px;
+  }
+
+  .contact-form label {
+    padding-left: 5px;
+  }
+
+  .contact-form input {
+    margin-left: 5px;
+    min-width: 170px;
+  }
+
+  .contact-form textarea {
+    margin-left: 5px;
+    width: 75%;
+  }
 }
