--- a/src/components/details/Hero.css
+++ b/src/components/details/Hero.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   text-align: center;
   width: 100%;
-  height: 80vh;
+  height: 85vh;
   overflow: hidden;
 }
 
@@ -62,9 +62,6 @@
   outline-offset: -4px;
 }
 
-.text-top {
-}
-
 .hero-svg {
   padding: 10px;
   position: relative;
@@ -88,5 +85,17 @@
     left: 0px;
     margin-bottom: 100px;
     min-height: 200px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .masthead {
+    height: 100vh;
+    margin: 0;
+    width: 80%;
+  }
+
+  .masthead button {
+    width: 200px;
   }
 }
