--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -11,3 +11,10 @@
   font-size: 4em;
   margin-top: 0;
 }
+
+@media screen and (max-width: 375px) {
+  .contact {
+    font-size: 0.75em;
+    margin: 0 auto;
+  }
+}
